--- a/NeoContract5/SGAS.csproj
+++ b/NeoContract5/SGAS.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{15DFB6B6-A57D-4A26-A5B7-EA1B2D102E20}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NeoContract5</RootNamespace>
-    <AssemblyName>NeoContract5</AssemblyName>
+    <RootNamespace>SGAS</RootNamespace>
+    <AssemblyName>SGAS</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -46,8 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contract1.cs" />
+    <Compile Include="Admin.cs" />
+    <Compile Include="SGAS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TransferInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="build.tasks" />
