--- a/SGAS.UnitTests/SGAS.UnitTests.csproj
+++ b/SGAS.UnitTests/SGAS.UnitTests.csproj
@@ -150,6 +150,9 @@
     <Reference Include="Microsoft.Net.Http.Headers, Version=2.0.3.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Net.Http.Headers.2.0.3\lib\netstandard2.0\Microsoft.Net.Http.Headers.dll</HintPath>
     </Reference>
+    <Reference Include="Neo, Version=2.7.6.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Neo.2.7.6.1\lib\net47\Neo.dll</HintPath>
+    </Reference>
     <Reference Include="Neo.VM, Version=2.2.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Neo.VM.2.2.0\lib\net461\Neo.VM.dll</HintPath>
     </Reference>
@@ -219,17 +222,13 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RPCBlockChain.cs" />
+    <Compile Include="RpcClient.cs" />
     <Compile Include="SGASTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\neo-project\neo\neo\neo.csproj">
-      <Project>{ff8cfe05-4ea9-4172-8d13-138eee935201}</Project>
-      <Name>neo</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\SQLitePCLRaw.lib.e_sqlite3.linux.1.1.11\build\net35\SQLitePCLRaw.lib.e_sqlite3.linux.targets" Condition="Exists('..\packages\SQLitePCLRaw.lib.e_sqlite3.linux.1.1.11\build\net35\SQLitePCLRaw.lib.e_sqlite3.linux.targets')" />
